--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "componentreactmahad",
-  "version": "1.0.1",
+  "version": "1.1.0-beta.0",
   "description": "une librairie de component react",
   "main": "index.js",
   "scripts": {
