--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,22 +12,7 @@ jobs:
         - uses: actions/checkout@v2
           with:          
             token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-        - run: git config --global user.name '${{ secrets.GH_PUBLIC_NAME }}'      
-        - run: git config --global user.email '${{ secrets.GH_EMAIL }}'      
+        - run: git config --global user.name '${{ Mahadigueh }}'      
+        - run: git config --global user.email '${{ mahadigueh@gmail.com }}'      
         - run: npm version patch -m "[RELEASE] %s"      
         - run: git push
-      
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.MON_SECRET }}
