--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "componentreactmahad",
   "version": "1.1.0-beta.0",
   "description": "une librairie de component react",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "files": [
+    "/lib"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
