Correction de mot de passe

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,4 +42,4 @@ jobs:
       with:
         server: ${{ secrets.HOTE_SERVEUR }}
         username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
+        password: ${{ secrets.PASSWORD_FTP }}
