--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,6 +29,9 @@ jobs:
         - uses: JS-DevTools/npm-publish@v1
           with:
             token: ${{ secrets.MON_SECRET }}
+            exclude: |
+              **/.storybook/**
+              **/node_modules/**
 
   web-deploy:
     name: 🎉 Deploy
@@ -36,6 +39,11 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v2
+
+    - name: Build project
+      run: |
+        yarn install
+        yarn build-storybook
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.2
@@ -43,3 +51,5 @@ jobs:
         server: ${{ secrets.HOTE_SERVEUR }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD_FTP }}
+        local-dir: ./storybook-static/
+        server-dir: public_html/storybook/
