--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "componentreactmahad",
   "version": "1.1.12",
   "description": "une librairie de component react",
-  "main": "./lib/index.js",
+  "main": "index.js",
   "files": [
     "/lib"
   ],
