--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "componentreactmahad",
   "version": "1.1.16",
   "description": "une librairie de component react",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
