--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.8",
     "@storybook/addon-docs": "^6.4.10",
-    "antd": "^4.18.2"
+    "antd": "^4.18.2",
+    "yarn": "^1.22.19"
   },
   "bugs": {
     "url": "https://github.com/Mahadigueh/fxgcomponentsmaigu001/issues"
